--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ img{
 /* header */
 header{
     min-height: 100vh;
-    background-image: url(images/pexels-digital-core-239919.jpg)  center/cover no-repeat fixed;
+    background-image: url(https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Nnx8c2NpZW5jZXxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60)  center/cover no-repeat fixed;
     display: flex;
     flex-direction: column;
     justify-content: stretch;
