--- a/views/index.ejs
+++ b/views/index.ejs
@@ -221,14 +221,16 @@
             <!-- item -->
             <div class = "blog-item">
               <div class = "blog-img">
-                <img src = "images/blog-p-6.jpg" alt = "">
+                <img src = "https://images.financialexpress.com/2020/06/realme-X3-SuperZoom.png" alt = "https://images.indianexpress.com/2020/06/realmeX3SuperZoom.jpg">
                 <span><i class = "far fa-heart"></i></span>
               </div>
               <div class = "blog-text">
-                <span>20 January, 2020</span>
-                <h2>Lorem ipsum, dolor sit amet consectetur adipisicing</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis libero quas ipsum laudantium nihil! Quaerat.</p>
-                <a href = "#">Read More</a>
+                <span>7 April, 2021</span>
+                <h2>Realme X3</h2>
+                <p>a muscular monster yet affordable device comes with last year's flagship snapdragon 855 plus assembled with up to 8 GB ram and256 GB of UFS 3.0 storage.
+
+and 64 mp...</p>
+                <a href = "RealmeX3.html">Read More</a>
               </div>
             </div>
             <!-- end of item -->
