--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
 
     <title>Dachro Technology</title>
+    <link href="https://i.pinimg.com/originals/2a/82/fe/2a82fe343e74c262f7638fe38520d926.jpg" rel="icon">
   </head>
   <body>
      <div class="container">
