--- a/views/RealmeX3.ejs
+++ b/views/RealmeX3.ejs
@@ -82,23 +82,56 @@ it also has a 4200 mAh battery with 30 watts of DART charging.
 
               <h3>Realme X3 Experience</h3>
                         <h4>Cons</h4>
-<p>With even budget phones performing smoothly these days, it's no surprise that the Realme X7 5G was smooth and responsive in everyday tasks. The setup process was simple enough but there are several defaults you'll want to change manually later, such as advertising preferences. The X7 5G is pleasant and comfortable enough to use without any hassles. It did get slightly warm when charging rapidly, but that was about it for heating. The in-display fingerprint sensor and face recognition were usually quick but there was some hesitation sometimes.
+                            <h5>Display</h5>      
+<p>as a primary device, I have been using it since last year. It is also my daily driver. From my perspective, Display is pretty average. outdoor visibility is poor.
 
-As the first phone in India with a Dimensity 800U SoC, benchmark scores should be interesting. The X7 5G managed 3,35,698 overall in AnTuTu, as well as 599 and 1,800 respectively in Geekbench 5's single-core and multi-core tests. It also ran GFXBench's Car Chase and Manhattan 3.1 graphics tests at 18fps and 31fps respectively, while 3DMark Sling Shot Extreme and Wild Life tests returned scores of 3,137 and 1,589.
+though it has a higher refresh rate display you can easily drain out your charge in just 6 hours. The LCD panel is pretty good in colour calibration and viewing angles are great.
 
-These scores mean that the new X7 5G handily beats the Realme 7 Pro₹ 20,999 which still sells for exactly the same prices. The Dimensity 800U seems to be roughly on par with Qualcomm's Snapdragon 765G and 750G, trading blows in different tests.
-
-As for games, I found both Call of Duty Mobile and Asphalt 9: Legends to be smooth. They ran at Medium and Default quality settings and were quite enjoyable. The screen is relatively crisp and colours are punchy, but this isn't the best quality I've seen at this price level. Widevine L1 DRM has been implemented so you can watch HD-quality streaming videos through your favourite services. There's a single speaker on the bottom and sound quality is pretty good by smartphone standards. This phone is Hi-Res Audio certified but you'll still get the best results with a good pair of earphones.
-
-Battery life shouldn't be a problem at all. The Realme X7 5G can easily run for a over full day even if you throw a lot of heavy tasks at it, including gaming and using the cameras. Our HD video loop test ran for a very impressive 20 hours, 45 minutes. Charging is also pretty quick – it took only 25 minutes to get from zero to 50 percent, and a full charge took 1 hour, 3 minutes using the bundled “SuperDart” charger.</p>
-
-              <h3>Realme X7 5G cameras</h3>
+and not even too much colour shift I faced. As today's standard realme should have gone with a lower refresh rate super AMOLED.</p>
+                        <h5>Battery Life</h5>
               
               <p>
-nterestingly, Realme seems to have bucked the pressure to have “quad cameras” as a selling point for this phone. I'm happy with that, since a low-grade fourth camera, such as the 2-megapixel “B&W portrait” filter one on the Realme X7 Pro 5G, would be of very limited use anyway. Even the 2-megapixel macro camera that the Realme X7 5G has is largely for entertainment and doesn't capture good enough results to be used for serious photography. You'll spend most of your time with the 64-megapixel, f/1.8 primary and the 8-megapixel f/2.3 ultra-wide-angle cameras.
+              after display, there is one thing which is making this phone worse user experienced model is a small capacity battery.
+in today's standard, we can see below fifteenth thousand rupee phones with a 5000 mAh battery.
+ As it has a very powerful CPU and battery sucking huge high refresh rate LCD panel no positive response will add a point for battery.
+ But one huge positive point will seriously add more youths to buy this mobile as it has a very fast charging solution. the whole phone can from zero to a hundred in just a shy under 1 hour.
+ These two major drawbacks can seriously break the market of Realme x3 buyers. Other than that there are plenty of pros.</p>
+              <h4>pros.</h4>
+              <h5>Performance</h5>
+              <p>the main attraction of this device is its record-breaking performance. the flagship snapdragon 8 series processor has a serious amount of power under the hood with Adeno 640 GPU it must be a gamers heaven. most AAA titles run pretty smooth. though it has a smaller battery it can run most games more than 4 and a half hours long. you can even play high refresh rate games here at ease. if I have a single word to describe it I would rather go for MONSTER.</p>
+              <h5>the second point is the camera:</h3>
+              <h6>First the main camera:</h6>
+              <p>First the main camera:
 
-Realme's software is fairly easy to use and common modes are accessible, resolution settings, which you might need often, are at the bottom of the main menu and one layer deep. In the daytime, the Realme X7 5G was generally quick to lock focus and seemed to do well with metering exposures, at least at its default 16-megapixel binned resolution. There were some signs of oversharpening in post-processing, and details at a distance were a little too murky for my liking. On the other hand, close-ups came out well with vivid colours.
-</p>
+it's a very capable camera as it has a Samsung sensor. It has an aperture of f/1.8 it can handle night photos pretty well.it has EIS as it is on a tight budget. many other night modes such as starry mode, tripod mode, etc. are present here
+
+it takes sharp and crisp photos.it can also do 64 mp full sensor RAW image. When comes to video it supports 4K up to 60 FPS But you can only go only 1080P with 60 fps on EIS. It also has max stabilization but it crops out the image too far. In a conclusion.
+
+this sensor is pretty good both in photography and videography.</p>
+              <h6>Second, on the list is the  Ultrawide:</h6>
+               <p>it has an 8 mp ultrawide sensor with an aperture of f/2.3 and a view of 119 degrees.in daylight, it captures decent images. but at night image quality drops too far. this sensor only supports up to 1080p at 30 Fps. average video you can shoot with it this sensor in daylight.
+
+it's a basic ultrawide sensor which company uses from 10000 rupee phone to 40000 rupee phone. I would say this is a decent sensor.</p>
+                <h6>number three the  Telephoto:</h6>
+                <p>a 12 mp telephoto sensor has been added to this quad-cam setup. this sensor can go up to 2x optical zoom 10x digital and 20x hybrid zoom as per Realme claims. I use it when taking portraits. photo taken up to 5x zoom can be useable.
+
+it can support 4k at 60fps while shooting video. As it has an aperture of f/2.5 it performs pretty well in daylight but average at night. overall a great sensor.</p>
+                <h6>number four is Macro:</h6>
+                <p>just to fill the fourth space of this quad-cam setup Realme had added a 2-megapixel camera that can go as close as 4 cm from the object. and with an aperture of f/2.4, it performs average in daylight.
+
+quite frankly, most people don't even use it. some of you can certainly find fun clicking photos.</p>
+                 <h5>number three from our Pros list is  Build Quality.</h5>
+                 <p>With a weight of around 200 grams, it is on the heavier side.
+
+Though its heaviness it's pretty comfortable to hold in hand as it has a better weight distribution. this has a glass and plastic sandwich design where the entire frame is built with plastic as it is cheap. but it has corning's gorilla glass five protection in front and back. mine is pearl white so it has.
+
+that mat finish feels nice in hand and resists finger spots on the back. overall build quality feels premium.
+
+those are the main pros of this device.</p>
+                <h4>conclusion:</h4>
+                <p>Finally, here comes my conclusion. there are many great options in this range below the 25k price point. if you have a strict budget of around 20k you may buy other Realme phones but if you want that serious performance at that price. I would rather say go for it.
+
+otherwise, try to increase your budget to 25k and get Iqoo 3.</p>
             </div>
             <div>
               <img src = "https://i9.ytimg.com/vi/Vgm21puC1fE/mqdefault.jpg?time=1617777000000&sqp=COiitYMG&rs=AOn4CLB86ENOYwCnUkIg-V-usizQ27OPaQ" alt = "image">
