added signup faclity

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -66,7 +66,7 @@
             <!-- item -->
             <div class = "design-item">
               <div class = "design-img">
-                <img src = "images/A.I (1).png" alt = "image">
+                <img src = "images/A.I.png" alt = "image">
                 <span><i class = "far fa-heart"></i> 1</span>
                 <span>A.I</span>
               </div>
@@ -275,13 +275,12 @@ and 64 mp...</p>
       
 <!-- Modal Section -->
 
-<div class="bg-modal" style=<%=display%>>
+<div class="bg-modal" style=<%= display %>>
 	<div class="modal-contents">
 
 		<div class="close">+</div>
-		<img src="https://richardmiddleton.me/comic-100.png" alt="">
 
-		<form action="">
+		<form action="/upload" method="POST">
 			<input type="email" placeholder="E-Mail">
 			<button type="submit">Submit</button>
 		</form>
