--- a/views/index.ejs
+++ b/views/index.ejs
@@ -281,8 +281,8 @@ and 64 mp...</p>
 		<div class="close">+</div>
 
 		<form action="/upload" method="POST">
-			<input type="email" placeholder="E-Mail">
-			<button type="submit">Submit</button>
+			<input type="email" name="email" placeholder="E-Mail">
+			<button type="submit" class= "btn btn-warning">Submit</button>
 		</form>
 
 	</div>
